feat: 타이핑 애니메이션 구현 완료

--- a/typed_animation/style.css
+++ b/typed_animation/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #373544;
     color: #fff;
 }
-.container {
+.typed-container {
     display: flex;
     justify-content: center;
     align-items: center;
