--- a/ink-name-card/style.css
+++ b/ink-name-card/style.css
@@ -2,8 +2,10 @@ body, html {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: #111;
-  color: white;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  color: black;
   font-family: 'Noto Serif KR', serif;
 }
 
@@ -11,6 +13,8 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 0;
 }
 
@@ -26,5 +30,39 @@ canvas {
 }
 
 #message.show {
+  opacity: 1;
+}
+
+/* 새로운 스타일 */
+.content-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  pointer-events: none; /* 클릭이 캔버스에 전달되도록 */
+}
+
+.text-container {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0;
+}
+
+.char-wrapper {
+  font-size: 48px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+  color: black;
+  margin: 0 2px;
+}
+
+.char-wrapper.revealed {
   opacity: 1;
 }
